comments-out position:sticky and adds overflow-y: scroll for issue #222

--- a/src/components/AdminPage/CategoryList.module.css
+++ b/src/components/AdminPage/CategoryList.module.css
@@ -3,7 +3,7 @@
 }
 
 .Form {
- position: sticky;
- top: 0px;
- overflow: scroll;
+  /* position: sticky; */
+  top: 0px;
+  overflow-y: scroll;
 }
